--- a/src/Component/AboutMe/aboutMe.css
+++ b/src/Component/AboutMe/aboutMe.css
@@ -13,7 +13,7 @@
 
 .msg-heading>h6 {
     font-size: 16px;
-    margin-top: 20px !important;
+    margin: 10px 0 20px !important;
 }
 
 .msg-content>p {
@@ -23,8 +23,8 @@
 
 .msg-img>img {
     width: 100%;
-    border-radius: 50%;
-    height: 100%;
+    /* border-radius: 50%; */
+    height: 550px;
 }
 
 .msg-img-content {
@@ -39,6 +39,24 @@
     border-bottom: 1px solid var(--them-color);
 }
 
+.about-btn-cont {
+    display: flex;
+    /* justify-content: center; */
+    margin-top: 30px;
+}
+
+.about-btn {
+    padding: 10px 35px;
+    background-color: var(--them-color);
+    color: var(--second-bg-color);
+    border: none;
+}
+
+@media (max-width: 991px) {
+.msg-img{
+    margin-bottom: 50px;
+}
+}
 
 @media (max-width: 768px) {
     .about-us-msg-row {
