--- a/src/Component/getInTouch/GetInTouchMap.css
+++ b/src/Component/getInTouch/GetInTouchMap.css
@@ -66,16 +66,16 @@
   height: 40px;
 }
 
-.contact-btn {
-  display: flex;
-  justify-content: start;
-  margin-top: 30px;
+.contact-us-form-heading p{
+  font-weight: 400;
+  font-style: italic;
+  margin-bottom: 0;
 }
 
 .contact-btn>button {
   padding: 12px 30px;
   background-color: var(--second-bg-color);
-  color: aliceblue;
+  color: var(--text-color);
 }
 
 .contact-btn {
@@ -87,7 +87,7 @@
 .contact-btn>button {
   padding: 10px 35px;
   background-color: var(--them-secondary);
-  color: aliceblue;
+  color: var(--text-color);
   border: none;
 }
 
@@ -114,7 +114,7 @@
 }
 
 .contact-us-form-container {
-  margin-top: 40px;
+  margin-top: 25px;
 }
 
 @media (max-width: 768px) {
@@ -158,4 +158,23 @@
   .info-cards {
     gap: 27px;
   }
+}
+
+.fees-availability {
+  background: beige;
+  padding-block: 70px;
+}
+
+.fees-availability-heading {
+  color: var(--second-bg-color);
+}
+
+.fees-availability-img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.fees-availability-img img {
+  max-height: 605px;
 }
