--- a/src/Component/Hero/hero.css
+++ b/src/Component/Hero/hero.css
@@ -4,7 +4,7 @@
     width: 100%;
     background-size: cover;
     padding-block: 70px;
-    height: 100vh;
+    height: 750px;
     background-position: center;
     display: flex;
     justify-content: center;
@@ -89,6 +89,9 @@
 @media (max-width: 768px) {
     .hero-img-container>img {
         width: 100%;
+    }
+    .hero-main{
+        height: 600px;
     }
 }
 
