--- a/src/Component/Navbar/navbar.css
+++ b/src/Component/Navbar/navbar.css
@@ -3,7 +3,11 @@
     color: rgb(0, 0, 0);
     z-index: 1000;
     transition: background-color 0.3s;
-    padding-block: 20px;
+    padding-bottom: 20px;
+    padding-top: 20px;
+}
+.ds-none{
+    display: none !important;
 }
 
 
@@ -66,6 +70,9 @@
 
 
 @media (max-width: 768px) {
+    .res-none{
+        display: none !important;
+    }
     .navbar-logo>a>img {
         height: auto;
     }
@@ -112,6 +119,13 @@
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
+    .res-none{
+        display: none !important;
+    }
+    .nav-upper-text{
+        display: none;
+    }
+
     .hero-img-container>img {
         width: 100%;
     }
