--- a/src/Component/Values/value.css
+++ b/src/Component/Values/value.css
@@ -1,30 +1,39 @@
-.values{
-    background: var(--them-secondary);
-    /* padding: 60px 0; */
+.values {
+  background: var(--them-secondary);
+  padding: 70px 0;
 }
 
-.values-heading{
-    color: white;
-
+.values-heading {
+  color: white;
+  margin-bottom: 40px;
+  text-align: center;
 }
 
-.values-swiper-slide{
-    background: transparent;
-    text-align: center;
-    padding: 30px 0px 0;
-    outline: none;
-    box-shadow: none !important;
+.slide-heading {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 10px;
+  text-align: center;
+  color: white;
 }
 
-  .values .values-swiper-slide h2 {
-    font-size: 20px;
-    font-weight: 600;
-    margin-bottom: 15px;
-    color: white;
-  }
-  
-  .values .values-swiper-slide p {
-    font-size: 14px;
-    line-height: 1.4;
-    color: white;
-  }
+.slide-text {
+  font-size: 1rem;
+  line-height: 1.5;
+  text-align: center;
+  color: white;
+  margin-bottom: 0;
+}
+
+.values .slick-dots li button:before {
+  color: var(--them-color) !important; 
+  font-size: 12px; 
+}
+
+.values .slick-dots li.slick-active button:before {
+  color: var(--them-color) !important; 
+}
+
+.values .slick-dots {
+  bottom: -20px; 
+}
