--- a/src/Component/Counselling/counselling.css
+++ b/src/Component/Counselling/counselling.css
@@ -34,12 +34,18 @@
     margin: 0;
 }
 
+@media (min-width: 991px) and (max-width: 1200px){
+
+    .counselling-page{
+        padding-top: 200px;
+    }
+}
 @media (max-width: 768px) {
     .counselling-description{
         margin-top: 50px;
     }
 
     .counselling-page{
-        padding-top: 140px;
+        padding-top: 250px;
     }
 }   
