--- a/src/Component/Navbar/navbar.css
+++ b/src/Component/Navbar/navbar.css
@@ -192,7 +192,8 @@
         display: flex;
         gap: 15px;
         align-items: center;
-        justify-content: flex-end; /* Aligns icons to the right */
+        justify-content: flex-end;
+        /* Aligns icons to the right */
     }
 
     .navbar-logo>a>img {
@@ -268,5 +269,21 @@
 
     .navbar-icons .btn-outline-primary {
         padding: 10px 10px !important;
+    }
+}
+
+@media (min-width: 992px) and (max-width: 1200px) {
+
+    .navbar-logo>a>img {
+        width: 210px;
+    }
+    .navbar-nav .nav-item {
+        margin-right: 12px;
+    }
+    .navbar-nav .nav-item .nav-link{
+        font-size: 15px;
+    }
+    .navbar-icons .btn-outline-primary {
+        padding: 7px 12px;
     }
 }
