--- a/src/Component/FAQ/faq.css
+++ b/src/Component/FAQ/faq.css
@@ -18,6 +18,7 @@
   padding: 16px 0px;
   font-weight: 400;
   font-size: 17px;
+  color: var(--second-bg-color);
 }
 
 .answer {
@@ -105,7 +106,7 @@
   .answer {
     padding: 0 0px 12px 0px;
     font-size: 12px;
-    color: #838383;
+    color: var(--second-bg-color);
   }
 
   .disclaimer {
