--- a/src/Component/AboutMe/aboutMe.css
+++ b/src/Component/AboutMe/aboutMe.css
@@ -24,6 +24,7 @@
 .msg-img>img {
     width: 100%;
     height: 550px;
+    object-fit: contain;
 }
 
 .msg-img-content {
@@ -51,23 +52,12 @@
     border: none;
 }
 
-@media (max-width: 991px) {
-
-    .msg-img {
-        margin-bottom: 50px;
-    }
-
-    .msg-img img {
-        max-height: 400px;
-    }
-}
-
 @media (max-width: 556px) {
     .msg-img img {
         max-height: 326px;
+        object-fit: cover;
     }
 }
-
 
 @media (min-width: 557px) and (max-width:767px) {
     .msg-img img {
@@ -78,7 +68,7 @@
 
 @media (max-width: 768px) {
 
-    
+
 
     .about-us-msg-row {
         flex-direction: column-reverse !important;
@@ -97,4 +87,15 @@
         letter-spacing: 1px;
     }
 
+}
+
+@media (max-width: 991px) {
+
+    .msg-img {
+        margin-bottom: 50px;
+    }
+
+    .msg-img img {
+        max-height: 400px;
+    }
 }
