--- a/src/Component/AboutUs/about.css
+++ b/src/Component/AboutUs/about.css
@@ -56,7 +56,6 @@
     width: 100%;
     max-height: 500px;
     object-fit: contain;
-    border-radius: 10px;
 }
 
 .additional-content {
@@ -106,6 +105,8 @@
 @media (max-width: 990px) {
     .about-img img {
         width: 100%;
+        object-fit: cover;
+
     }
 
     .about-img {
