--- a/src/Component/getInTouch/GetInTouchMap.css
+++ b/src/Component/getInTouch/GetInTouchMap.css
@@ -26,7 +26,7 @@
   justify-content: center;
   align-items: flex-start;
   width: 100%;
-  max-width: 500px;
+  max-width: 100%;
   margin: 0 auto;
 }
 
@@ -66,7 +66,7 @@
   height: 40px;
 }
 
-.contact-us-form-heading p{
+.contact-us-form-heading p {
   font-weight: 400;
   font-style: italic;
   margin-bottom: 0;
@@ -117,15 +117,38 @@
   margin-top: 25px;
 }
 
+.fees-availability {
+  background: beige;
+  padding-block: 70px;
+}
+
+.fees-availability-heading {
+  color: var(--second-bg-color);
+}
+
+.fees-availability-img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
+.fees-availability-img img {
+  max-height: 605px;
+  object-fit: cover;
+  width: 100%;
+}
+
 @media (max-width: 991px) {
-  .fees-availability-content{
+  .fees-availability-content {
     margin-top: 50px;
   }
 }
 
 @media (max-width: 768px) {
 
-  .fees-availability-content{
+  .fees-availability-content {
     margin-top: 50px;
   }
 
@@ -145,6 +168,7 @@
   .info-cards {
     align-items: center;
     width: 100%;
+    margin: 0;
   }
 
   .info-card {
@@ -161,6 +185,9 @@
 
   .fees-availability-img img {
     height: 400px;
+    max-height: 605px;
+    object-fit: cover;
+    width: 100%;
   }
 }
 
@@ -174,21 +201,3 @@
   }
 }
 
-.fees-availability {
-  background: beige;
-  padding-block: 70px;
-}
-
-.fees-availability-heading {
-  color: var(--second-bg-color);
-}
-
-.fees-availability-img {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.fees-availability-img img {
-  max-height: 605px;
-}
