--- a/src/Component/Qualifications/Qualifications.css
+++ b/src/Component/Qualifications/Qualifications.css
@@ -1,7 +1,7 @@
 .qualifications-main {
     background-color: #f9f9f9;
     padding: 40px 20px;
-    border-radius: 8px;
+    /* border-radius: 8px; */
   }
   
   .qualifications-list {
