--- a/src/Component/Testimonial/testimonial.css
+++ b/src/Component/Testimonial/testimonial.css
@@ -85,7 +85,7 @@
   top: -10px;
   right: 0;
   z-index: -1;
-  border-radius: 0 0 10px 10px;
+  /* border-radius: 0 0 10px 10px; */
 }
 
 .swiper-pagination-bullet {
