--- a/src/Component/getInTouch/GetInTouchMap.css
+++ b/src/Component/getInTouch/GetInTouchMap.css
@@ -101,7 +101,7 @@
   margin: 0 0 20px 0;
   background-color: var(--text-color);
   border: 1px solid #d3caca;
-  border-radius: 4px;
+  border-radius: 0;
   height: 57px;
 }
 
@@ -110,7 +110,7 @@
   display: flex;
   padding: 25px 25px 25px 15px;
   border: 1px solid #d3caca;
-  border-radius: 4px;
+  border-radius: 0px;
 }
 
 .contact-us-form-container {
@@ -162,7 +162,7 @@
   }
 
   .info-cards-container {
-    margin-top: 30px;
+    /* margin-top: 30px; */
   }
 
   .info-cards {
