--- a/src/Component/getInTouch/GetInTouchMap.css
+++ b/src/Component/getInTouch/GetInTouchMap.css
@@ -161,14 +161,11 @@
     flex: 1;
   }
 
-  .info-cards-container {
-    /* margin-top: 30px; */
-  }
-
   .info-cards {
     align-items: center;
     width: 100%;
     margin: 0;
+    margin-top: 20px;
   }
 
   .info-card {
