--- a/src/Component/Hero/hero.css
+++ b/src/Component/Hero/hero.css
@@ -8,8 +8,7 @@
     padding-block: 70px;
     min-height: 650px;
     height: auto;
-    margin-top: 0;
-    /* Initially no margin */
+    margin-top: 100px;
 }
 
 .hero-container {
@@ -102,8 +101,14 @@
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
+
+    .hero-main {
+        margin-top: 140px;
+        min-height: 600px;
+        }
+
     .hero-content-heading h1 {
-        font-size: 35px;
+        font-size: 29px;
     }
 
     .hero-content-heading h4 {
