--- a/src/Component/Hero/hero.css
+++ b/src/Component/Hero/hero.css
@@ -48,7 +48,8 @@
     margin-top: 20px;
     font-size: 20px;
     color: var(--text-color);
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 1);
+    /* text-shadow: 1px 1px 2px rgba(0, 0, 0, 1); */
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
 }
 
 .hero-img-container {
