--- a/src/Component/getInTouch/GetInTouchMap.css
+++ b/src/Component/getInTouch/GetInTouchMap.css
@@ -140,13 +140,13 @@
   width: 100%;
 }
 
-@media (max-width: 991px) {
+@media (min-width: 768px) and (max-width: 991px) {
   .fees-availability-content {
     margin-top: 50px;
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
 
   .fees-availability-content {
     margin-top: 50px;
@@ -165,6 +165,7 @@
     align-items: center;
     width: 100%;
     margin: 0;
+    margin-top: 15px;
   }
 
   .info-card {
