--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playwrite+CO+Guides&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 @font-face {
   font-family: "Halimun";
@@ -18,9 +19,9 @@ body {
 }
 
 .heading-with-sub>h6 {
-  font-size: 20px;
+  font-size: 30px;
   margin-bottom: 15px;
-  font-family: "halimun";
+  font-family: "Great Vibes";
   line-height: 2;
 }
 
@@ -38,8 +39,8 @@ body {
 
 @media (max-width: 768px) {
   .heading-with-sub>h6 {
-    font-size: 15px;
-    letter-spacing: 3px;
+    font-size: 25px;
+    /* letter-spacing: 3px; */
   }
 
   .heading-with-sub>h3 {
