--- a/src/Component/Counselling/counselling.css
+++ b/src/Component/Counselling/counselling.css
@@ -13,7 +13,7 @@
 
 .img-fluid {
     max-width: 100%;
-    height: 100%;
+    max-height: 368px;
     display: block;
     margin: 0 auto;
 }
@@ -26,7 +26,7 @@
 }
 
 .counselling-para{
-    font-size: 18px;
+    font-size: 16px;
 }
 
 .counselling-para:last-child {
@@ -35,33 +35,48 @@
 
 .counselling-ing-container{
     width: 100%;
-    height: 200px;
+    height: 235px;
     object-fit: cover;
-    
+
 }
 
-/* counselling-sub-container */
+.counselling-main-img-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
 
 @media (min-width: 992px) and (max-width: 1200px) {
     
     .counselling-page {
         padding-top: 200px;
     }
+    .img-fluid {
+        max-height: 415px;
+    }
 }
 
 @media (min-width: 769px) and (max-width: 991px) {
     .counselling-description {
-        margin-top: 50px;
+        margin-bottom: 50px;
     }   
+    .counselling-main-section-row{
+        flex-direction: column-reverse;
+    }
 }
 
 
 @media (max-width: 768px) {
     .counselling-description {
-        margin-top: 50px;
+        margin-bottom: 50px;
     }
 
     .counselling-page {
         padding-top: 250px;
+    }
+    .counselling-main-section-row{
+        flex-direction: column-reverse;
     }
 }
