--- a/src/Component/Counselling/counselling.css
+++ b/src/Component/Counselling/counselling.css
@@ -1,5 +1,5 @@
 .counselling-page {
-    padding-top: 190px;
+    padding-top: 70px;
     padding-bottom: 50px;
     background-color: var(--them-color);
 }
@@ -51,7 +51,7 @@
 @media (min-width: 992px) and (max-width: 1200px) {
     
     .counselling-page {
-        padding-top: 200px;
+        padding-top: 60px;
     }
     .img-fluid {
         max-height: 415px;
@@ -59,24 +59,22 @@
 }
 
 @media (min-width: 769px) and (max-width: 991px) {
-    .counselling-description {
-        margin-bottom: 50px;
-    }   
-    .counselling-main-section-row{
-        flex-direction: column-reverse;
+    .counselling-page {
+        padding-top: 50px;
     }
+
+    .counselling-description {
+        margin-top: 50px;
+    }   
 }
 
 
 @media (max-width: 768px) {
     .counselling-description {
-        margin-bottom: 50px;
+        margin-top: 50px;
     }
 
     .counselling-page {
-        padding-top: 250px;
-    }
-    .counselling-main-section-row{
-        flex-direction: column-reverse;
+        padding-top: 50px;
     }
 }
